# umep-reqs

./: .gitattributes  .gitignore  pyproject.toml
.github/workflows/: publish.yml
umep-reqs/: setup.py
