[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "umep-reqs"
description = "UMEP requirements package"
authors = [{ name = "UMEP dev team" }]
dependencies = [
    "pyarrow<23",  # temporary: supy 2026.1.28 _load.py incompatible with pyarrow 23 (UMEP-dev/SUEWS#1252)
    "numba==0.59.0",
    "jaydebeapi==1.2.3",
    "netCDF4",
    "openpyxl",
    "rasterio==1.4.3",
    "rioxarray==0.19",
    "target-py",
    "uwg"
]
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
qgis3 = ["supy==2026.1.28rc1"]
qgis4 = ["supy==2026.1.28"]

[tool.setuptools]
packages = ["umep-reqs"]

[tool.setuptools_scm]
local_scheme = "no-local-version"