[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "umep-reqs"
description = "UMEP requirements package"
authors = [{ name = "UMEP dev team" }]
dependencies = [
    "jaydebeapi==1.2.3",
    "netCDF4",
    "openpyxl",
    "target-py",
    "uwg"
]

readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
qgis3 = ["supy==2026.4.3rc1",
         "numba==0.59.0",
         "rasterio==1.4.3",
         "rioxarray==0.19"
]
qgis4 = ["supy==2026.4.3",
         "numba==0.64",
         "rasterio==1.5",
         "rioxarray==0.19"
]

[tool.setuptools]
packages = ["umep-reqs"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
